<resources>
    <string name="app_name">Eclipse Soundscapes</string>
    <string name="title_eclipse_features">Eclipse Features</string>
    <string name="title_eclipse_center">Eclipse Center</string>
    <string name="title_media">Media</string>
    <string name="title_about">About</string>
    <string name="first_contact_reminder">The Solar Eclipse is going to begin soon.</string>
    <string name="first_contact_begun">The Solar Eclipse has begun!</string>
    <string name="totality_reminder">The Total Solar Eclipse is going to begin soon.</string>
    <string name="totality_begun">The Total Solar Eclipse has begun!</string>
    <string name="tap_listen">Tap to listen now.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_notifications">Enable Notifications</string>
    <string name="pref_title_location">Access Location</string>
    <string name="pref_title_license">License</string>
    <string name="pref_title_libraries">Open Source Libraries</string>
    <string name="pref_title_credit">Photo Credits</string>
    <string name="settings_legal">Legal</string>
    <string name="legal_soundscape_title">Eclipse Soundscape</string>
    <string name="legal_libraries_use">Libraries We Use</string>
    <string name="legal_library_audiokit">AUDIOKIT</string>
    <string name="about_us_title">About Us</string>
    <string name="about_us_text">From the Smithsonian Astrophysics Observatory and NASA\'s Heliophysics Education Consortium, The Eclipse Soundscapes Project uses sound to create a multisensory experience of astronomical events such as eclipses. With this app, and an additional citizen science project to record changing environmental sounds during eclipses, Eclipse Soundscapes aims to engage all learners with astrophysics, including people who are blind or visually impaired. For more information, visit eclipsesoundscapes.org.</string>
    <string name="more_info_title">More Information</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="hrs">Hours</string>
    <string name="min">Minutes</string>
    <string name="sec">Seconds</string>
    <string name="countdown_title">Countdown Until Eclipse</string>
    <string name="countdown_prefix">Countdown until eclipse from your location</string>
    <string name="event_prefix">Event from your location</string>
    <string name="local_time_prefix">local time</string>
    <string name="ut_time_prefix">universal time</string>
    <string name="event_layout_description">Events at your location are below. Events include your local time and universal time.</string>
    <string name="totality_duration">Duration of Totality: </string>
    <string name="eclipse_center_permission">You don\'t want to miss this amazing astronomical event! We\'ll need your location to access this feature.\nPress anywhere on the screen to continue.</string>
    <string name="walkthrough_location_permission">You don\'t want to miss this amazing astronomical event! We\'ll need access to your location to show you information about the eclipse.</string>
    <string name="settings_permission_off">Location settings is turned off. Go to More > Settings > Enable Location or tap to go.</string>
    <string name="noPermissionRationale">Access to location services has been denied. This features requires access to your current location to display information about the eclipse. </string>
    <string name="device_settings_permission">To continue, please allow access to your location from your device settings.</string>
    <string name="app_settings_permission">To continue, please allow access to your location from the application settings.</string>
    <string name="location_search">Finding your location…</string>
    <string name="location_search_stop">Tap to stop</string>
    <string name="outside_path_of_eclipse">Unfortunately the Eclipse is not visible from your location</string>
    <string name="get_closest_location">Get closest location from me</string>
    <string name="my_latitude">Your latitude:</string>
    <string name="my_longitude">Your longitude:</string>
    <string name="percent_eclipse">% Eclipse:</string>
    <string name="eclipse_date">Date:</string>
    <string name="eclipse_type">Eclipse type:</string>
    <string name="eclipse_event">Event</string>
    <string name="eclipse_local_time">Local Time</string>
    <string name="eclipse_time_ut">Time (UT)</string>
    <string name="eclipse_type_full">Total Solar Eclipse</string>
    <string name="eclipse_type_partial">Partial Solar Eclipse</string>
    <string name="eclipse_type_none">No Solar Eclipse</string>
    <string name="eclipse_none_description">The solar eclipse is not visible from your location</string>
    <string name="eclipse_start_partial">Start of partial eclipse</string>
    <string name="eclipse_start_full">Start of total eclipse</string>
    <string name="eclipse_end_partial">End of partial eclipse</string>
    <string name="eclipse_end_full">End of total eclipse</string>
    <string name="eclipse_max">Maximum eclipse</string>
    <string name="first_contact_description">This is the first moment that the moon, slowly moving from left to right, appears to touch the sun.
        The intensity of the sun\'s light makes it unsafe to look at without special eye protection until the totality, the few minutes during which the moon completely eclipses the sun.
        The two celestial bodies appear to be the same size, although the sun\'s light is so bright that it obliterates all of the moon\'s features causing the moon to appear as a smooth, obsidian disk.
        For the next several minutes, the moon\'s black disk will creep across the sun, progressively blocking more of sun\'s light and heat until the totality.
        \n\nYou can use this time to explore Rumble Map images and audio descriptions of phenomena unique to a total eclipse.
        In the moments before, during and after totality, this app will provide a play-by-play of the action, providing images and descriptions of this rare and fascinating stellar event.
        \n\nAdditional scientific info:\nThe outer atmosphere of the Sun, called the corona, is usually not visible from the surface of the Earth.
        To study the corona, scientists send satellites into space to make observations of the corona in wavelengths of light that the human eye cannot see, such as this image of the Sun in X-rays taken by the X-ray Telescope on the Hinode spacecraft.
        This X-ray image shows the view of the Sun being eclipsed by the moon a seen from space. A total solar eclipse provides a rare opportunity to see the corona from Earth in visible light.</string>
    <string name="bailys_beads_description">On the right side of the moon, orbs of glowing sunlight shimmer off the edge of the moon\'s black disk.
        Called Baily\'s Beads, these final areas of the sun\'s light appear as glimmering pearls on a wire, made intensely bright by the absence of light surrounding them.
        \n\nExplanation of what you might feel as you interact: \nOn the Rumble Map, explore the features between the moon, the sun\'s corona and Baily\'s beads which are intense and irregular.
        \n\nAdditional scientific info: \nEven this small section of the Sun\'s light cannot be viewed without special eye protection.
        Please use special eclipse glasses or filters if viewing this feature directly on the Sun with your eyes.
        \nBaily\'s beads are caused because the moon's surface is not a smooth, perfect sphere.
        Rays of light peer through the ravines and valleys between mountains on the moon causing this spectacular feature.</string>
    <string name="corona_description">During the totality, the moon completely covers the sun\'s glowing orb, and the sun\'s outer atmosphere is revealed.
        As if the moon were the center of a celestial sunflower, the corona appears as soft white petals, massive flumes of faint light that taper out across the sky.
        Closer to the surface of the moon\'s flat ebony circle, the corona is a swirling chaos of loops and flares. Intense fiery lines of light appear to ignite the moon\’s black edge.
        \n\nHow to interact with the Rumble Map:\nOn the Rumble Map, explore the features between the moon and the sun\’s corona.
        You will hear/feel variations as your fingers pass over different features of the corona.
        \n\nAdditional scientific info:\nThe corona is the thin outer atmosphere of the Sun.
        With temperatures at over 1 million degrees Fahrenheit, it radiates light in wavelengths that are too short for the human eye to see (like X-rays) and that are absorbed by the Earth's atmosphere.
        However, the corona reflects some of the white light from the Sun's photosphere below it. This faint reflection is only seen when the much brighter photosphere is blocked, like during a total eclipse.</string>
    <string name="diamond_ring_description">On the left side of the black moon, a sliver of sunlight blasts into view with white-hot intensity.
        As the area of re-emerging sunlight grows, it resembles a diamond, beaming out its brilliant light from its setting on the circular ring of the moon\'s edge.
        \n\nAdditional scientific info:\nEven this small section of the Sun\'s light cannot be viewed without special eye protection.
        Please use special eclipse glasses or filters if viewing this feature directly on the Sun with your eyes.
        \nAs the moon barely moves away from the solar surface, the powerful light of the Sun peers around the side of the moon.
        The Sun's light is so intense that even this small fraction of it dominates the sky.</string>
    <string name="title_rumble_map">Rumble Map</string>
    <string name="walkthrough_rumble_map_text">Our Rumble Map tool is designed for you to hear and feel astronomical phenomena, such as eclipses, using the touchscreen and the speakers on your smartphone. For example: the Rumble Map will display photos of the Moon passing in front of the Sun during the most engaging and educational moments of an eclipse. When you touch the image on the screen, the app will read the grayscale value of a pixel underneath your finger, and play an audio tone which will vibrate your phone with a strength relative to the brightness of that section. As you move your finger onto the bright sections of the Sun, your phone will vibrate more. As you move your finger into the dark spaces blocked by the Moon’s disk, the vibration will diminish and disappear. By paying close attention to the audio tones and the strength of your phone\'s vibration, you can learn how much sunlight is visible at each stage of the eclipse, and explore some of the fascinating features of the Sun\'s corona.</string>
    <string name="closeButton">Close</string>
    <string name="permission_dialog_header">Hello Soundscapers!</string>
    <string name="permission_dialog_body">Don\'t miss the Eclipse. We need your permission to notify you about Eclipse Events.</string>
    <string name="permission_dialog_rationale">Allow permission please. This helps to keep you informed with the Eclipse</string>
    <string name="permission_dialog_button">Enable Notifications</string>
    <string name="permission_dialog_footer">You can manage permissions in settings</string>
</resources>