<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/custom_background"
            android:focusable="true">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_clear_white"
                android:contentDescription="@string/closeButton"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/details"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/permission_dialog_header"
                />


            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:text="@string/permission_dialog_body"
                android:layout_centerInParent="true"
                android:layout_alignLeft="@+id/header"
                android:layout_alignStart="@+id/header"
                android:layout_alignRight="@+id/header"
                android:layout_alignEnd="@+id/header" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/permission_dialog_rationale"/>

            <Button
                android:id="@+id/permission_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_disabled"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/white"
                android:drawableStart="@drawable/ic_clear_white"
                android:drawableLeft="@drawable/ic_clear_white"
                android:padding="16dp"
                android:text="@string/permission_dialog_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:text="@string/permission_dialog_footer"/>

        </LinearLayout>

</LinearLayout>